Wed Mar 18 01:13:50 1998  Harri Porten  <porten@tu-harburg.de>

	* modemcmds.cpp: replaced 'Modem Sustains Fast Init' (from general.cpp)
	option by an adjustable 'Init Delay'. Some users reported that they
 	had to increase the delay time to prevent kppp from hanging
 	after ATZ.

Mon Mar 16 03:37:04 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* command line options need to be parse after creating a KApplications
	due to some changes by Matthias in kapp I think.

1998-03-15  Mario Weilguni  <mweilguni@kde.org>

	* main.cpp: added mini-icon for all kppp windows, not just 
	  the main window

Mon Mar  9 00:17:20 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* added new script keyword 'scan', see the documentation.
	  It allows for password challenges etc.

Tue Feb 24 19:19:44 1998  Mario Weilguni  <mweilguni@kde.org>

	* pap.cpp, connect.cpp: removed the need for a "+ua" option
	  for PAP. Unfortunatly this REQUIRES that kppp can write
	  /etc/ppp/pap-secrets (either by running SUID root or
	  by group permissions)

Fri Feb 13 01:12:19 1998  Harri Porten  <porten@tu-harburg.de>

	* loginterm.cpp: implemented the possibility to log in via
	a simple terminal window. Should have developed a generic widget
	that could have been shared by Miniterm, the debug window and
	loginterm, but I didn't want to touch the rest of the stuff yet.
	* kpppconfig.h: increased max. script size to 20

Thu Feb  5 22:00:55 1998  Harri Porten  <porten@tu-harburg.de>

	* pppdata.cpp: added pppdError() and setpppdError()
	* main.cpp: added new error message for timeout
	* removed last remaining command_on_disconnect bug (see Jan 24)

Sat Jan 31 19:56:03 1998  Harri Porten  <porten@tu-harburg.de>

	* main.cpp: in some cases kppp connected to an account 
	different from the one selected in the combo box. Added
	setAccount() in connectbutton() to fix that, hopefully.

Sun Jan 25 00:45:45 1998  Harri Porten  <porten@tu-harburg.de>
